<resources>
    <string name="app_name">Adventure Friends</string>
    <string name="facebook_application_id" translatable="false">446563812375953</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb446563812375953</string>
    <string name="twitter_consumer_key" translatable="false">Hq1fE2H6BMUwHPHNNXOORWHmz</string>
    <string name="twitter_consumer_secret" translatable="false">qPDMFbUZTdBTcBAcs0B1EUNGYMmXpyMCb1LZ0gU41oBICP86K3</string>
    <string name="title_activity_lobby">Lobby</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="enter_new_game_id">Enter existing campaign ID</string>
    <string name="create_new_campaign">Create New Campaign</string>
    <string name="new_campaign_title_label">Please enter a title for the new campaign:</string>
    <string name="new_campaign_title_hint">Title</string>
    <string name="new_campaign_description_label">Please enter a description for the new campaign:</string>
    <string name="new_campaign_description_hint">Description</string>
    <string name="start_campaign">start campaign</string>

    <string name="new_campaign_spinner_prompt">Please choose a base game</string>
    <string-array name="base_games">
        <item>Select a base game…</item>
        <item>Goblins? Goblins!</item>
        <item>Dungeons &amp; Dragons</item>
        <item>Pathfinder</item>
        <item>Beyonder</item>
    </string-array>
    <string name="title_activity_dm">DMActivity</string>

    <string name="new_module_title_label">Please enter a title for the new module:</string>
    <string name="new_module_title_hint">Title</string>
    <string name="new_module_summary_label">Please enter a summary for the new module:</string>
    <string name="new_module_summary_hint">Summary</string>
    <string name="create_module">create module</string>

    <string-array name="module_types">
        <item>Select a module type…</item>
        <item>Battle</item>
        <item>Story</item>
        <item>Non-battle</item>
        <item>Other</item>
    </string-array>

    <string name="title_activity_player">PlayerActivity</string>
    <string name="welcome_to_adventure_friends">Welcome to adventure friends!</string>
    <string name="play">play</string>
    <string name="view_logs">view logs</string>
    <string name="schedule">schedule</string>
    <string name="hat">Hat:</string>
    <string name="shirt">Shirt:</string>
    <string name="boots">Boots:</string>
    <string name="weapon">Weapon:</string>
    <string name="range">Range:</string>
    <string name="name_label">Name:</string>
    <string name="name_hint">Name</string>
    <string name="size_label">Size:</string>
    <string name="job_label">Job:</string>
    <string name="create">create</string>
    <string name="enter_a_note_title">Enter a note title:</string>
    <string name="title_hint">Title</string>
    <string name="enter_the_note_body">Enter the note body:</string>
    <string name="body_hint">Body</string>
    <string name="level_label">Level:</string>
    <string name="money_label">Money:</string>
    <string name="edit_note_title_hint">Please enter a title</string>
    <string name="edit_note_body_hint">Please enter a body</string>
    <string name="edit">edit</string>
    <string name="cancel">Cancel</string>
    <string name="slash">/</string>
    <string name="precious_goo">Precious Goo</string>
    <string name="body">Body:</string>
    <string name="mind">Mind:</string>
    <string name="essence">Essence:</string>
    <string name="level">Level</string>
    <string name="money">Money:</string>
    <string name="pearls">pearls</string>
    <string name="abilities">Abilities:</string>
    <string name="inventory">Inventory:</string>
    <string name="launch_module">launch module</string>
    <string name="complete_module">complete module</string>
    <string name="health_label">Health:</string>
    <string name="xp_to_next_level">XP to next level</string>
    <string name="body_label">Body:</string>
    <string name="mind_label">Mind:</string>
    <string name="essence_label">Essence:</string>
    <string name="speed_label">Speed:</string>
    <string name="damage">Damage:</string>
    <string name="check">Check:</string>
    <string name="effects">Effects:</string>
    <string name="note_title_error">Please enter a title</string>
    <string name="note_body_error">Please enter a body</string>
    <string name="save">save</string>
    <string name="new_note_title_error">Please enter a new title or press cancel</string>
    <string name="new_note_body_error">Please enter a new body or press cancel</string>
    <string name="new_npc_empty_name_error">Please enter a name</string>
    <string name="new_npc_level_error">Please enter a level greater than 0</string>
    <string name="new_npc_money_error">Please enter a value for money</string>
    <string name="module_type_error">Please select a module type</string>
    <string name="campaign_title_error">Please enter a campaign title</string>
    <string name="campaign_spinner_error">Please choose a base game</string>

</resources>
