<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.makalaster.adventurefriends.lobby.lobbyFragments.NewCampaignFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_campaign_title_label"/>

    <EditText
        android:id="@+id/new_campaign_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_campaign_title_hint"
        android:inputType="textCapWords"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_campaign_description_label"/>

    <EditText
        android:id="@+id/new_campaign_description_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_campaign_description_hint"/>

    <Spinner
        android:id="@+id/base_game_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spinner_margin"
        android:layout_marginTop="@dimen/spinner_margin"
        android:entries="@array/base_games"
        android:prompt="@string/new_campaign_spinner_prompt"/>

    <Button
        android:id="@+id/start_campaign_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_campaign"/>

</LinearLayout>
