<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/layout_padding"
    tools:context="com.makalaster.adventurefriends.dm.dmFragments.module.notes.NewNoteFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_a_note_title"/>

    <EditText
        android:id="@+id/new_note_title"
        android:scrollHorizontally="true"
        android:inputType="textCapWords"
        android:maxLines="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title_hint"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_the_note_body"/>

    <EditText
        android:id="@+id/new_note_body"
        android:layout_width="match_parent"
        android:layout_height="@dimen/note_body_height"
        android:hint="@string/body_hint"
        android:gravity="top"
        android:inputType="textMultiLine"/>

    <Button
        android:id="@+id/create_new_note_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create"/>

</LinearLayout>
